--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "font-awesome": "^4.7.0",
     "mongoose": "^4.13.12",
     "mongoose-type-mail": "^1.0.0",
+    "mongoose-unique-validator": "^2.0.0",
     "morgan": "^1.9.0",
     "multer": "^1.3.0"
   },
