build algo for validate user stream

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restfulTaskAPI",
+  "name": "restfulapi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.0",
     "bootswatch": "^4.0.0",
+    "eslint": "^4.19.1",
     "express": "^4.16.1",
     "express-promise-router": "^3.0.2",
     "font-awesome": "^4.7.0",
