--- a/Angular-app/package.json
+++ b/Angular-app/package.json
@@ -12,7 +12,9 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^0.6.5",
     "@angular/animations": "^5.2.0",
+    "@angular/cli": "^1.5.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
@@ -25,11 +27,11 @@
     "bootswatch": "^4.0.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "glob": "^7.1.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.3",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "^2.8.7",
@@ -46,6 +48,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "^2.4.2"
   }
 }
