--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@angular/cli": "^1.6.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.0",
     "bootswatch": "^4.0.0",
@@ -17,12 +18,11 @@
     "express": "^4.16.1",
     "express-promise-router": "^3.0.2",
     "font-awesome": "^4.7.0",
+    "glob": "^7.1.2",
     "mongoose": "^5.0.16",
     "mongoose-type-mail": "^1.0.0",
     "morgan": "^1.9.0",
     "multer": "^1.3.0"
   },
-  "devDependencies": {
-    "@angular/cli": "^1.7.4"
-  }
+  "devDependencies": {}
 }
