--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   "license": "ISC",
   "dependencies": {
     "@angular/cli": "^1.6.0",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.0",
     "bootswatch": "^4.0.0",
     "eslint": "^4.19.1",
     "express": "^4.16.1",
     "express-promise-router": "^3.0.2",
+    "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "glob": "^7.1.2",
     "mongoose": "^5.0.16",
     "mongoose-type-mail": "^1.0.0",
     "morgan": "^1.9.0",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "passport": "^0.4.0"
   },
   "devDependencies": {}
 }
